--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ body {
   background-image: url("https://picsum.photos/id/403/600/400");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Indie Flower", cursive;
+  font-family: "Epilogue", sans-serif;
   font-weight: 900;
 }
 
